--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "source-map-explorer": "^2.3.1"
   },
