--- a/package.json
+++ b/package.json
@@ -4,13 +4,23 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.0.2",
+    "@apollo/react-hooks": "^3.1.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.0.0",
+    "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.13",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-ws": "^1.0.19",
+    "apollo-utilities": "^1.3.3",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "flow-bin": "^0.119.1",
+    "graphql": "^14.6.0",
+    "hookrouter": "^1.2.3",
     "husky": "^4.2.3",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
@@ -20,7 +30,8 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "source-map-explorer": "^2.3.1"
+    "source-map-explorer": "^2.3.1",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
